finished sorting by status and priority

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </header>
 <body>
 	<input id="search" type="text" value="search by title">
-	<select id="select-status" onchange="myStat()">
-		<option value="all">all</option>
-		<option value="open">open</option>
-		<option value="done">done</option>
+	<select id="select-status">
+		<option value="item">all</option>
+		<option value="task">open</option>
+		<option value="task-done">done</option>
 	</select>
-	<select id="select-priority" onchange="myPrior()">
-		<option value="all-priority">all</option>
-		<option value="high">hight</option>
-		<option value="normal">normal</option>
-		<option value="low">low</option>
+	<select id="select-priority">
+		<option value="item">all</option>
+		<option value="High">hight</option>
+		<option value="Normal">normal</option>
+		<option value="Low">low</option>
 	</select>
 	<button type="button" id="create">Create</button>
 <!--Modal window-->
