create search by Title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<span>TODOlist</span>
 </header>
 <body>
-	<input id="search" type="text" value="search by title">
+	<input type="text" id="search" autocomplete="off" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
 	<select id="select-status">
 		<option value="item">all</option>
 		<option value="task">open</option>
